kubernetes/homepage/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.local.rafa.run`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: local-rafa-run-tls
